--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 			$("#code").typewriter();
 		}
 	</script>
-<EMBED src="http://91youzhi.com:8888/BaseTrainManage/love/music/music2love.mp3" width="0" height="0" border=0 autostart="ture" loop="true"></EMBED>
+<EMBED src="http://91youzhi.com:8888/BaseTrainManage/love/music/music2love.mp3" width="0" height="0" border=0 autostart="true" loop="true"></EMBED>
 
 </body>
 
